chore(manually_added): Add support for adding unlisted APIs
The photoslibrary API is not listed however is still available.
This adds a method of manually adding APIs to the shared.yaml and adds the photoslibary API info.

Fixes #198

--- a/etc/api/shared.yaml
+++ b/etc/api/shared.yaml
@@ -29,6 +29,10 @@ api:
     - slides
     # invalid code generation - syntax error
     - poly
+  manually_added:
+    - name: photoslibrary
+      version: v1
+      discovery_rest_url: https://photoslibrary.googleapis.com/$discovery/rest?version=v1
   terms:
     # how to actually do something with the API
     action: doit
